--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -171,11 +171,59 @@ p
 		font-family: "roboto-black"
 
 .expertise
+	position: relative
 	.title,.expertise-p
 		text-align: center
+	.title
+		margin-top: 60px
+
+	.expertise-p:after
+		content: ''
+		width: 50px
+		height: 1px
+		background-color: rgba(#413d4b, 0.35)
+		position: absolute
+		top: 82px
+		left: 50%
+		margin-left: -25px
 		// display: block
-
-
+	&_block
+		display: flex
+		flex-wrap: wrap
+		flex-direction: row
+		position: relative
+		justify-content: space-around
+		align-items: flex-start
+		margin-top: 30px
+		&_item
+			&:nth-child(3n)
+				border: none
+			display: block
+			padding-bottom: 40px
+			padding-top: 40px
+			text-align: center
+			flex-basis: 300px
+			border-right: 1px solid rgb(235, 235,235)
+			img
+				height: 50px
+			.brush
+				height: 42px
+				margin-bottom: 8px
+			.title
+				font-size: 14px
+				margin-top: 32px
+			.block_item_p
+				padding: 0 20px
+				color: rgba(#333, 0.75)
+				font-size: 14px
+.expertise_block_item:first-child::after
+	content: ''
+	background-color: rgb(235, 235,235)
+	width: 100%
+	height: 1px
+	top: 275px
+	position: absolute
+	display: block
 .img-responsive
 	display: block
 	max-width: 100%
