--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,7 +1,8 @@
 @import "_mixins/font-face"
 
++font-face("play", "../fonts/PlayfairDisplay-Regular")
 +font-face("play-black", "../fonts/PlayfairDisplay-Black")
-+font-face("play-bold", "../fonts/PlayfairDisplay-Bold.ttf")
++font-face("play-bold", "../fonts/PlayfairDisplay-Bold")
 +font-face("roboto-light", "../fonts/Roboto/Roboto-Light")
 +font-face("roboto-black", "../fonts/Roboto/Roboto-Black")
 +font-face("hammerSmith", "../fonts/HammersmithOne-Regular")
