--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -390,5 +390,80 @@ p
 		display: flex
 		flex-direction: column
 
+.footer
+	height: 400px
+	position: relative
+	.content
+		margin-top: 90px
+		margin-bottom: 28px
+		.logo-small
+			transform: translateY(-20px)
+		.description
+			margin-top: 0
+		.title
+			font-size: 15px
+			font-family: 'roboto-black'
+		
+		.adress
+			margin-top: 26px
+			display: flex
+			align-items: flex-start
+			.adress_text
+				font-family: 'myriad'
+				margin: 0 0 0 15px
+		.phone
+			margin-top: 22px
+			display: flex
+			align-items: flex-start
+			.phone_text
+				margin: 0 0 0 15px
+
+		.subscribe
+			width: 211px
+			height: 45px
+			display: inline-block
+			font-family: 'roboto-light'
+			opacity: .75
+			font-size: 14px
+			color: #fff
+			border-color: #fff
+			margin-top: 30px
+			position: relative
+		.paper-plane
+			display: inline-block
+			float: right
+			margin-top: 30px
+
+		.social_block
+			.fa
+				border: 1px solid white
+				padding: 9px 11.5px
+				border-radius: 50px
+				margin-right: 3px
+				margin-top: 28px
+				&:last-child
+					margin-right: 0
+			.fa-twitter
+					padding: 9px 9px
+			.fa-dribbble
+				padding: 9px 10px
+			.fa-instagram
+				padding: 9px 9.5px
+			.fa-youtube-play
+				padding: 9px 9px
+			.fa-google-plus		
+				padding: 9px 7px
+				
+
+
+
+
+	.consult
+		position: relative
+	.consult-item
+		font-family: "roboto"
+		display: inline-block
+		margin-right: 32px
+
 
 @import "media" // Всегда в конце
