--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -5,4 +5,6 @@
 +font-face("play-bold", "../fonts/PlayfairDisplay-Bold")
 +font-face("roboto-light", "../fonts/Roboto/Roboto-Light")
 +font-face("roboto-black", "../fonts/Roboto/Roboto-Black")
++font-face("roboto", "../fonts/Roboto-Regular")
 +font-face("hammerSmith", "../fonts/HammersmithOne-Regular")
++font-face("myriad", "../fonts/MyriadProRegular/MyriadProRegular")
