--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -18,6 +18,7 @@
 			margin-left: 50%
 			transform: translateX(-50%)
 		.header-nav ul
+			padding-left: 0
 			margin-left: 0
 		.header__content
 			margin-top: 80px
@@ -114,12 +115,64 @@
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
+	.header
+		.header-nav ul
+			display: flex
+			flex-wrap: wrap
+			margin-left: 20px
+		.header-nav ul li
+			padding-right: 20px
+		.header__content
+			margin-top: 20px
+			margin-bottom: 80px
+
+	.works
+		.title
+			margin-left: 50%
+			transform: translateX(-50%)
+		
+	.testimonials
+		.face-carousel
+			margin-bottom: 20px
+			.face
+				margin-right: 5px
+			.fa
+				margin: 0
+			.fa-angle-left
+				 margin-right: 5px
+	.client
+		.client-logos_block
+			flex-wrap: wrap
+			margin-bottom: 0
+		.block-left, .block-right
+			margin-bottom: 45px
+			margin-right: 20px
+			margin-left: 20px
+			
+	.footer 
+		.content 
+			margin-bottom: 15px
+			.content_block
+				flex-direction: column 
+				.subscribe
+					margin-bottom: 20px
+			
+	.team
+		.team_block
+			.team_item
+				min-width: 150px
+				margin-bottom: 20px
+		.team_bottom_block
+			margin-top: 20px
+			margin-bottom: 30px
+			
 
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
-
+	.header .header__content
+		margin-bottom: 40px
 
 /*==========  Mobile First  ==========*/
 
